// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Films reducer: Should handle FILMS_FILL action 1`] = `
Object {
  "data": undefined,
  "error": false,
  "isFetching": false,
}
`;

exports[`Films reducer: Should handle FILMS_SET_FETCHING_ERROR action 1`] = `
Object {
  "data": Array [],
  "error": undefined,
  "isFetching": false,
}
`;

exports[`Films reducer: Should handle FILMS_START_FETCHING action 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": true,
}
`;

exports[`Films reducer: Should handle FILMS_STOP_FETCHING action 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": false,
}
`;

exports[`Films reducer: Should return initial state by default 1`] = `
Object {
  "data": Array [],
  "error": false,
  "isFetching": false,
}
`;
